--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 header {
   background-color: #ff6f61;
   padding: 15;
-  color: blue;
-  font-size: 24px;
+  color: pink;
+  font-size: 30px;
   text-transform: uppercase;
   position: sticky;
   top: 0;
